@@ -1,3 +1,11 @@
+2002-03-07  Per Bothner  <per@bothner.com>
+
+	* XQParser.java (parseNodeTest):  NamedChildren and NamedDescendant
+	now take a single ElementType, not a namespace+localname pair.
+	(parseRelativePathExpr):  Handle // followed by name and predicates.
+
+	* XQuery.java (<init>):  Declare min, max, and position.
+
 2002-03-02  Per Bothner  <per@bothner.com>
 
 	* XQuery.java (parseFile):  Now throws IOException and SyntaxException.
